--- a/todo.txt
+++ b/todo.txt
@@ -1,4 +1,4 @@
 - include 5 enemy textures in enemy struct
 - design maps
-- how to write in mlx e.g player lives, etc??
+- make sound when shoot
 - free everything that was allocated
